fix lỗi đăng nhập bằng facebook khi trong DB có 2 username trùng tên

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,10 @@ spring.session.timeout=30m
 spring.session.jdbc.initialize-schema=always
 
 
-app.jwt.secret=ThisIsASecretKeyForJwt123456789
-app.jwt.expiration=3600000
-jwt.secret=jK7g9H2sP0F+Zx91Kl8tS3B4W9bQm4nA6fD1eV0rY2s=
+# ================= JWT =================
+jwt.secret=THIS_IS_A_VERY_LONG_SECRET_KEY_AT_LEAST_32_CHARS
+jwt.access.expiration=900000
+jwt.refresh.expiration=604800000
 
 
 spring.security.oauth2.client.registration.facebook.client-id=3038318939684025
