bổ sung chức năng đăng nhập bằng Google OAuth 2.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,16 @@ spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.face
 spring.security.oauth2.client.provider.facebook.user-name-attribute=id
 
 
+spring.security.oauth2.client.registration.google.client-id=1047641501934-fq1vtvq071kj13bc8pdlg023t7atjbup.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.com.example.auth_oauth=DEBUG
